fix: scrollbar gutter problem

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,7 +11,6 @@
   display: flex;
   width: 100%;
   text-align: center;
-  justify-items: center;
   justify-content: center;
   height: fit-content;
   min-height: 100vh;
@@ -20,11 +19,22 @@
 html, body {
   margin: 0;
   overscroll-behavior: none;
-  scrollbar-gutter: stable;
+  /* scrollbar-gutter: stable; */
+  overflow-x: hidden;
 }
 
 main {
   width: 100%;
   justify-items: center;
+}
+
+button {
+  border: transparent;
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+button:hover {
+  border: transparent;
 }
 
