--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -8,7 +8,7 @@
   justify-self: center;
   justify-content: space-around;
   height: 3.5em;
-  width: 100vw;
+  width: 100%;
   align-items: center;
   background-color: rgb(44, 47, 47);
 }
